; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_timeout.c_timeouts_add.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_timeout.c_timeouts_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeouts = type { i64 }
%struct.timeout = type { i32 }

@TIMEOUT_ABS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timeouts_add(%struct.timeouts* %0, %struct.timeout* %1, i64 %2) #0 {
  %4 = alloca %struct.timeouts*, align 8
  %5 = alloca %struct.timeout*, align 8
  %6 = alloca i64, align 8
  store %struct.timeouts* %0, %struct.timeouts** %4, align 8
  store %struct.timeout* %1, %struct.timeout** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.timeout*, %struct.timeout** %5, align 8
  %8 = getelementptr inbounds %struct.timeout, %struct.timeout* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @TIMEOUT_ABS, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load %struct.timeouts*, %struct.timeouts** %4, align 8
  %15 = load %struct.timeout*, %struct.timeout** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @timeouts_sched(%struct.timeouts* %14, %struct.timeout* %15, i64 %16)
  br label %27

18:                                               ; preds = %3
  %19 = load %struct.timeouts*, %struct.timeouts** %4, align 8
  %20 = load %struct.timeout*, %struct.timeout** %5, align 8
  %21 = load %struct.timeouts*, %struct.timeouts** %4, align 8
  %22 = getelementptr inbounds %struct.timeouts, %struct.timeouts* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* %6, align 8
  %25 = add nsw i64 %23, %24
  %26 = call i32 @timeouts_sched(%struct.timeouts* %19, %struct.timeout* %20, i64 %25)
  br label %27

27:                                               ; preds = %18, %13
  ret void
}

declare dso_local i32 @timeouts_sched(%struct.timeouts*, %struct.timeout*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
